Fixes photo alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -56,7 +56,7 @@ body {
   position: absolute;
   height: 80%;
   top: 10%;
-  left: 90%;
+  left: 95%;
   -webkit-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.42);
   -moz-box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.42);
   box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.42);
